--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @product do |f| %>
   <ul>
     <li>
-      <%= f.label :name %>
+      <%= f.label :name, 'ID' %>
       <%= f.text_field :name %>
     </li>
     <li>
@@ -9,5 +9,5 @@
       <%= f.text_area :description %>
     </li>
   </ul>
-  <%= f.submit 'Create' %>
+  <%= f.submit 'Show reviews' %>
 <% end %>
